# pdfsak

./: .gitignore  .python-version  .readthedocs.yaml  CHANGELOG  LICENSE  README.md  buildexe.bat  pdfsak  pdfsak.bat  pdfsak_version.py  pdftools  pdftools.cmd  pdftools.py  pdftools_main.py  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  upload_to_pypi.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/source/: commands.rst  conf.py  examples.rst  index.rst  installation.rst  other.rst
examples/: addtext.bat  addtext.py  addtext.sh  addtext_huge.bat  handout2x2.bat  handout2x2.py  handout2x2.sh  handout3x2.bat  handout3x2.py  handout3x2.sh  img2pdf.bat  img2pdf.py  img2pdf.sh  merge.bat  merge.py  merge.sh  merge_dir.bat  merge_dir.py  merge_dir.sh  nup12_land.bat  nup12_land.py  nup21.bat  nup21.py  pagelist.txt  rotate_pages.sh  runall.sh  splitpages.bat  splitpages.py  splitpages.sh
examples/bash/: runall.sh
examples/bash/scripts/: addtext.sh  clearscan.sh  delete_pages.sh  extract_pages.sh  handout2x2.sh  handout3x2.sh  img2pdf.sh  merge.sh  merge_dir.sh  recursive_dir.sh  remove_metadata.sh  replace_input.sh  rotate_pages.sh  swap_pages_end.sh  swap_pages_middle.sh  swap_pages_start.sh  watermark.sh
examples/batch/: runall.bat  runall_miktex.bat  runall_texlive.bat
examples/batch/scripts/: addtext.bat  clearscan.bat  delete_pages.bat  extract_pages.bat  handout2x2.bat  handout3x2.bat  img2pdf.bat  merge.bat  merge_dir.bat  replace_input.bat  rotate_pages.bat  swap_pages_end.bat  swap_pages_middle.bat  swap_pages_start.bat  watermark.bat
examples/input_source_code/: whiteslides.odp
examples/scripts/: addtext.sh  clearscan.sh  delete_pages.sh  extract_pages.sh  handout2x2.sh  handout3x2.sh  img2pdf.sh  merge.sh  merge_dir.sh  replace_input.sh  rotate_pages.sh  swap_pages_end.sh  swap_pages_middle.sh  swap_pages_start.sh
pdfsak/: pdfsak.py
